# Cargo.toml is the manifest file for Rust's package manager, cargo. This file contains metadata such as name, version, and dependencies for packages, which are call "crates" in Rust.

# rust doesn't use "-" in package names, so we use "_" when we use it instead

[package]
name = "day-09"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
lending-iterator = "0.1.7"
nom = "7.1.3"

