# Cargo.toml is the manifest file for Rust's package manager, cargo. This file contains metadata such as name, version, and dependencies for packages, which are call "crates" in Rust.

# rust doesn't use "-" in package names, so we use "_" when we use it instead

[package]
name = "day-16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infinitable = "1.5.0"
itertools = "0.11.0"
lending-iterator = "0.1.7"
nom = "7.1.3"
petgraph = "0.6.4"
rayon = "1.8.0"
regex = "1.9.5"

