# Cargo.toml is the manifest file for Rust's package manager, cargo. This file contains metadata such as name, version, and dependencies for packages, which are call "crates" in Rust.

# rust doesn't use "-" in package names, so we use "_" when we use it instead

[package]
name = "day-24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.24.2"
itertools = "0.11.0"
lending-iterator = "0.1.7"
nom = "7.1.3"
petgraph = "0.6.4"
radix_fmt = "1.0.0"
rayon = "1.8.0"
rstest_reuse = "0.6.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
rstest = "0.18.2"

